Fix btn alignment for mobile views - closes #402

--- a/src/stylesheets/components/_ui.scss
+++ b/src/stylesheets/components/_ui.scss
@@ -7,6 +7,13 @@ a {
   }
 }
 
+.btn-wrapper {
+  @include below($sm-breakpoint) {
+    width: 100%;
+    text-align: center;
+  }
+}
+
 a.btn {
   color:            white;
   height:           $button-size;
@@ -56,6 +63,9 @@ a.btn {
       text-align: center;
     }
 
+    @include below($sm-breakpoint) {
+      width: 85%;
+    }
   }
 
   &.secondary-color {
@@ -65,6 +75,10 @@ a.btn {
       &:hover {
         background-color: darken(#29C8A4, 5%)
       }
+    }
+    @include below($sm-breakpoint) {
+      width: 85%;
+      margin: 20px 0;
     }
   }
 }
